RESOLVED FIXED41380
linkProgram should fail when vertex/fragment shaders are not both present
https://bugs.webkit.org/show_bug.cgi?id=41380
Summary linkProgram should fail when vertex/fragment shaders are not both present
Zhenyao Mo
Reported 2010-06-29 15:46:28 PDT
In GL, when a shader is not present, the program will link against fixed functionality processing. In GLES, it should fail.
Attachments
patch (21.59 KB, patch)
2010-06-30 19:35 PDT, Zhenyao Mo
dglazkov: review+
commit-queue: commit-queue-
revised patch: remove tabs in the test file. (21.33 KB, patch)
2010-07-02 09:53 PDT, Zhenyao Mo
no flags
Zhenyao Mo
Comment 1 2010-06-30 19:35:05 PDT
Created attachment 60184 [details] patch test case is copied over from conformance tests (after fixing a bug in the test).
Kenneth Russell
Comment 2 2010-07-01 15:47:41 PDT
Comment on attachment 60184 [details] patch Looks good.
Dimitri Glazkov (Google)
Comment 3 2010-07-01 15:58:00 PDT
Comment on attachment 60184 [details] patch ok.
WebKit Commit Bot
Comment 4 2010-07-01 19:02:07 PDT
Comment on attachment 60184 [details] patch Rejecting patch 60184 from commit-queue. Failed to run "[u'git', u'svn', u'dcommit']" exit_code: 1 Last 500 characters of output: l/canvas/WebGLShader.cpp M WebCore/html/canvas/WebGLShader.h A repository hook failed: MERGE request failed on '/repository/webkit/trunk': Commit blocked by pre-commit hook (exit code 1) with output: The following files contain tab characters: trunk/LayoutTests/fast/canvas/webgl/program-test.html Please use spaces instead to indent. If you must commit a file with tabs, use svn propset to set the "allow-tabs" property. at /usr/local/git/libexec/git-core/git-svn line 570 Full output: http://webkit-commit-queue.appspot.com/results/3360165
Zhenyao Mo
Comment 5 2010-07-02 09:53:28 PDT
Created attachment 60372 [details] revised patch: remove tabs in the test file.
WebKit Commit Bot
Comment 6 2010-07-02 10:48:35 PDT
Comment on attachment 60372 [details] revised patch: remove tabs in the test file. Rejecting patch 60372 from commit-queue. Unexpected failure when processing patch! Please file a bug against webkit-patch. Failed to run "['./WebKitTools/Scripts/webkit-patch', '--status-host=webkit-commit-queue.appspot.com', 'land-attachment', '--force-clean', '--build', '--non-interactive', '--ignore-builders', '--build-style=both', '--quiet', 60372, '--test', '--parent-command=commit-queue', '--no-update']" exit_code: 1 Last 500 characters of output: 0372&action=edit Fetching: https://bugs.webkit.org/show_bug.cgi?id=41380&ctype=xml Processing 1 patch from 1 bug. Cleaning working directory Processing patch 60372 from bug 41380. NOBODY (OOPS!) found in /Users/eseidel/Projects/CommitQueue/LayoutTests/ChangeLog does not appear to be a valid reviewer according to committers.py. ERROR: /Users/eseidel/Projects/CommitQueue/LayoutTests/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive).
WebKit Commit Bot
Comment 7 2010-07-02 12:06:30 PDT
Comment on attachment 60372 [details] revised patch: remove tabs in the test file. Clearing flags on attachment: 60372 Committed r62396: <http://trac.webkit.org/changeset/62396>
WebKit Commit Bot
Comment 8 2010-07-02 12:06:35 PDT
All reviewed patches have been landed. Closing bug.
WebKit Review Bot
Comment 9 2010-07-02 14:20:18 PDT
http://trac.webkit.org/changeset/62396 might have broken Leopard Intel Debug (Tests) The following changes are on the blame list: http://trac.webkit.org/changeset/62395 http://trac.webkit.org/changeset/62396
Zhenyao Mo
Comment 10 2010-07-02 15:11:14 PDT
Skip the program-test.html for now: https://bugs.webkit.org/show_bug.cgi?id=41542
Zhenyao Mo
Comment 11 2010-07-03 16:19:05 PDT
*** Bug 40746 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.