WebCore/html/canvas/WebGLProgram.h
@@ -48,6 +48,12 @@ namespace WebCore {
 
         bool isUsingVertexAttrib0() const;
 
+        // Return true means getProgramParameter(LINK_STATUS) should return
+        // false; return false means we should actually call
+        // getProgramParameter(LINK_STATUS) to find out.
+        bool isLinkFailureFlagSet() const { return m_linkFailure; }
+        void setLinkFailureFlag(bool failed) { m_linkFailure = failed; }
+
     protected:
         WebGLProgram(WebGLRenderingContext*);
         
@@ -57,6 +63,8 @@ namespace WebCore {
         virtual bool isProgram() const { return true; }
 
         Vector<int> m_activeAttribLocations;
+
+        bool m_linkFailure;
     };
     
 } // namespace WebCore
